# qcma

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  snapcraft.yaml
android/: CMakeLists.txt
cli/: CMakeLists.txt  main_cli.cpp
common/: CMakeLists.txt  cmabroadcast.cpp  cmaclient.cpp  cmaevent.cpp  cmaobject.cpp  cmautils.h  database.h  qlistdb.cpp  sqlitedb.cpp  version.cpp  version.hpp
gui/: CMakeLists.txt  main.cpp  mainwidget.cpp  qtrayicon.cpp  qtrayicon.h
gui/forms/: backupitem.cpp  backupmanagerform.cpp  backupmanagerform.h  backupmanagerform.ui  configwidget.cpp  configwidget.ui  pinform.cpp  progressform.cpp
gui/resources/: io.gitlab.robxnano.qcma.metainfo.xml  qcma.desktop
gui/resources/images/: qcma.icns
packaging/appimage/: Containerfile  build.sh
packaging/debian/: changelog
packaging/flatpak/: build.sh  io.gitlab.robxnano.qcma.json
packaging/systemd/system/: qcma.service.in
packaging/systemd/user/: qcma.service.in
packaging/vcpkg/: vcpkg-configuration.json  vcpkg.json
